--- a/about.html
+++ b/about.html
@@ -249,7 +249,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">Contact</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>HALCO House: Tourism Office 10</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+263 784 371 174</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>florencekanera@zimtourism.com</p>
                     <div class="d-flex pt-2">
