--- a/booking.html
+++ b/booking.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tourist - Zimbabwe Tourism Attraction</title>
+    <title>Zimbabwe Tourism Attraction</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
