--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2">HALCO House: Tourism Office 10</i></small>
+                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2">950 Street,Nkulumane 12 Bulawayo</i></small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+263 784 371 174</small>
                     <small class="text-light"><i class="fa fa-envelope-open me-2"></i>florencekanera@zimtourism.com</small>
                 </div>
@@ -248,14 +248,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-3">Newsletter</h4>
-                    <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-primary w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
-                        <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
-                </div>
+                
             </div>
         </div>
         <div class="container">
